# intp

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS  README.md  SECURITY.md  code_of_conduct.txt  meson.build  meson_options.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  distro-packaging.yml  feature-request.yml  kernel-compat.yml  metric-fidelity-regression.yml
.github/workflows/: ci.yml  lintian.yml  plugin-abi.yml  release.yml
docs/: ARCHITECTURE.md  BUILDING.md  HARDWARE-COMPATIBILITY.md  INTEGRATIONS.md  KERNEL-6.8-CHANGES.md  METRICS-DEEP-DIVE.md  METRICS.md  PACKAGING.md  PLUGINS.md  PORTABILITY-ROADMAP.md  ROADMAP.md  VARIANT-COMPARISON.md  VISION.md
docs/design/: 0001-backend-registry.md  0002-output-schema-and-versioning.md  0003-ebpf-acceleration.md  0004-plugin-abi.md
examples/: meson.build
examples/plugin-hello-world/: README.md  hello-world.c  meson.build
include/intp/: intp.h  meson.build  metrics.h  plugin.h  schema.h  version.h.in
packaging/debian/: README.source  changelog  control  copyright  files  intp-doc.docs  intp-plugin-bpftrace.install  intp.install  libintp-dev.install  libintp1.install  rules  watch
packaging/debian/source/: options
packaging/debian/upstream/: metadata
shared/: README.md  intp-detect.sh  intp-resctrl-helper.sh  validate-cross-variant.sh  validate-v3-v4.sh
src/cli/: main.c  meson.build
src/lib/: libintp.c  meson.build  probe.c  prometheus.c
src/plugins/bpftrace/: bpftrace_plugin.c  meson.build
tests/: meson.build
tests/common/: fixture.h  intp_test.h
tests/fixtures/: README.md
tests/integration/: meson.build
tests/plugin-abi/: meson.build  test_descriptor.c
tests/unit/: meson.build  test_metrics.c  test_units.c  test_version.c
v1-original/: README-original.md
v2-updated/: README.md  intp-6.8.stp
v3-updated-resctrl/: README.md  intp-resctrl.stp
v3-updated-resctrl/docs/: LLC-OCCUPANCY-RESCTRL.md  RESCTRL-VALIDATION.md
v4-hybrid-procfs/: DESIGN.md  Makefile  README.md  intp-hybrid.c
v4-hybrid-procfs/include/: backend.h  detect.h  intp.h
v4-hybrid-procfs/scripts/: build-deb.sh  compare-environments.py  test-environments.sh
v4-hybrid-procfs/src/: backend_registry.c  blk.c  cpu.c  detect.c  intp.h  llcmr.c  llcocc.c  mbw.c  netp.c  nets.c  perfev.c  procutil.c  resctrl.c  resctrl.h
v5-bpftrace/: DESIGN.md  Makefile  README.md  intp.bt  run-intp-bpftrace.sh
v5-bpftrace/orchestrator/: aggregator.py  detect.py  resctrl_reader.py
v5-bpftrace/scripts/: blk.bt  cpu.bt  llcmr.bt  netp.bt  nets.bt
v5-bpftrace/tests/: test-output-format.sh
v6-ebpf-core/: DESIGN.md  Makefile  README.md
v6-ebpf-core/detect/: detect.c  detect.h
v6-ebpf-core/resctrl/: llcocc.c  mbw.c  resctrl.c  resctrl.h
v6-ebpf-core/scripts/: test-core-portability.sh
v6-ebpf-core/src/: intp.bpf.c  intp.c  intp_args.c  intp_args.h  intp_kern.bpf.c  intp_kern.bpf.h  main.c  vmlinux.h
v6-ebpf-core/tests/integration/: test-load-attach.sh  test-metrics-accuracy.sh  test-overhead.sh
v6-ebpf-core/tests/unit/: test-detect.c
